--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Portfólio</title>
+    <title>Gestão Condominial</title>
     <meta content="" name="description" />
 
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="img/icone.png" rel="icon" />
+    <link href="https://pngimg.com/d/letter_g_PNG27.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
