--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="col-lg-5 col-md-12 footer-info">
               <a href="index.html" class="logo d-flex align-items-center">
                 <img src="assets/img/logo.png" alt="" />
-                <span>Ceza Moreno do Monte</span>
+                <span>Ceza Moreno</span>
               </a>
               <br /><br /><br />
               <div class="social-links mt-3">
